# dl_server_test

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  locustfile.py  pyproject.toml  setup.cfg
app/: main.py
app/api/: router.py
app/api/endpoints/: health.py  predict.py
app/core/: config.py  exceptions.py
app/models/: schemas.py
app/services/: predictor.py
image_classification/: inference_onnx.py  onnx_converter.py  predict.py  train.py
image_classification/models/: efficient_classifier.py
image_classification/utils/: data_utils.py  dataset_setup.py  device_utils.py
